# tcp_server-esp32

./: CMakeLists.txt  README.md
components/periphs/: CMakeLists.txt
components/periphs/inc/: common.h  uart.h  wifi.h
components/periphs/src/: uart.c  wifi.c
components/tcp_server/: CMakeLists.txt  gpio.json
components/tcp_server/inc/: parser.h  tcp_server.h
components/tcp_server/src/: parser.c  tcp_server.c
main/: main.c
